--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -1,4 +1,5 @@
 .modal-form {
+  width: 100%;
   display: flex;
   flex-direction: column;
   padding: 40px;
@@ -9,73 +10,35 @@
     line-height: 1.5;
     text-align: center;
     letter-spacing: 0.03em;
+
     color: var(--secondary-title-text-colour);
-    margin-top: 0;
+   
     margin-bottom: 12px;
   }
 
   &__field {
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.166;
+    line-height: 1.16;
     letter-spacing: 0.01em;
-      color: var(--primary-text-colour);
-      margin-bottom: 4px;
-    }
+    color: var(--primary-text-colour);
+    margin-bottom: 4px;
   }
- 
+}
 
+.form-wrapper {
+  position: relative;
+  display: block;
+  margin-bottom: 10px;
 
-  .form-wrapper {
-    position: relative;
-    display: block;
-    margin-bottom: 10px;
-  
-    &__input {
-      width: 100%;
-      height: 40px;
-      border: 1px solid rgba(33, 33, 33, 0.2);
-      border-radius: 4px;
-      padding-left: 42px;
-      padding-right: 12px;
-      transition: border-color 250ms var(--timing-function);
-  
-      &:focus {
-        outline: none;
-        border-color: var(--accent-colour);
-      }
-    }
-    
-    &__icon {
-      position: absolute;
-      top: 50%;
-      left: 12px;
-      transform: translateY(-50%);
-      display: block;
-      fill: var(--secondary-title-text-colour);
-      transition: fill 250ms var(--timing-function);
-      .form-wrapper__input:focus + & {
-        fill: var(--accent-colour);
-      }
-    }
-  }
-
-  .modal-form__message {
+  &__input {
     width: 100%;
-    height: 120px;
+    height: 40px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-    padding: 12px 16px;
-    margin-bottom: 20px;
-    resize: none;
+    padding-left: 42px;
+    padding-right: 12px;
     transition: border-color 250ms var(--timing-function);
-    &::placeholder {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.01em;
-      color: rgba(117, 117, 117, 0.5);
-    }
 
     &:focus {
       outline: none;
@@ -83,79 +46,122 @@
     }
   }
 
-  .modal-form__check-desc {
-    display: flex;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.66;
-    letter-spacing: 0.03em;
-    color: var(--primary-text-colour);
-    align-items: center;
+  &__icon {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+    transform: translateY(-50%);
+    display: block;
+    fill: var(--title-color);
+    transition: fill 250ms var(--timing-function);
 
-    &::before {
-      display: block;
-      content: "";
-      width: 16px;
-      height: 15px;
-      border: 2px solid #000000;
-      border-radius: 2px;
-      cursor: pointer;
-      margin-right: 8px;
-      transition: border 250ms var(--timing-function);
-
-      .modal-form__term:checked + & {
-        background-image: url("../images/icon-check.svg");
-        background-position: center;
-        border-color: transparent;
-        background-color: var(--accent-colour);
-        background-repeat: no-repeat;
-      }
-
-      .modal-form__term:focus + & {
-        border: 2px solid var(--accent-colour);
-        border-radius: 2px;
-        transition: 250ms var(--timing-function);
-      }
+    .form-wrapper__input:focus + & {
+      fill: var(--accent-colour);
     }
+  }
+}
+
+.modal-form__message {
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 12px 16px;
+  margin-bottom: 20px;
+  resize: none;
+  transition: border-color 250ms var(--timing-function);
+
+  &::placeholder {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+  }
+
+  &:focus {
+    outline: none;
+    border-color: var(--accent-colour);
+  }
+}
+
+
+.modal-form__check-desc {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--primary-text-color);
+ 
+
+  &::before {
+    display: block;
+    content: "";
+    width: 16px;
+    height: 15px;
+    border: 2px solid #000000;
+    border-radius: 2px;
+    cursor: pointer;
+    margin-right: 8px;
+    transition: border 250ms var(--timing-function);
+
+    .modal-form__term:checked + & {
+      background-image: url("../images/icon-check.svg");
+      background-position: center;
+      border-color: transparent;
+      background-color: var(--accent-colour);
+      background-repeat: no-repeat;
+    }
+
+    .modal-form__term:focus + & {
+      border: 2px solid var(--accent-colour);
+      border-radius: 2px;
+      transition: 250ms var(--timing-function);
+    }
+  }
+}
+
+.policy-link {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--accent-color);
+  text-decoration-line: underline;
+}
+
+.form__button {
+  align-self: center;
+  display: inline-block;
+  margin-top: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-form__title {
+    font-size: 20px;
+    line-height: 1.15;
+  }
+  .modal-form__field {
+    font-size: 12px;
+    line-height: 1.16;
+  }
+
+  .modal-form__message::placeholder {
+    font-size: 12px;
+    line-height: 1.16;
+  }
+
+  .modal-form__check-desc {
+    font-size: 14px;
+    line-height: 1.71;
   }
 
   .policy-link {
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.66;
-    letter-spacing: 0.03em;
-    color: var(--accent-colour);
+    font-size: 14px;
+    line-height: 1.71;
   }
-  .form__button {
-    align-self: center;
-    display: inline-block;
-    margin-top: 30px;
-  }
-
-  
-    @media screen and (min-width: 1200px) {
-      .modal-form__title {
-        font-size: 20px;
-        line-height: 1.15;
-      }
-      .modal-form__field {
-        font-size: 12px;
-        line-height: 1.166;
-      }
-    
-      .modal-form__message::placeholder {
-        font-size: 12px;
-        line-height: 1.16;
-      }
-    
-      .modal-form__check-desc {
-        font-size: 14px;
-        line-height: 1.71;
-      }
-    
-      .policy-link {
-        font-size: 14px;
-        line-height: 1.71;
-      }
-    }
-    
+}
