--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,49 +1,56 @@
 .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(1);
-    min-width: 450px;
-    min-height: 609px;
-   
-    
-    background-color: var(--primary-bg-colour);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 
-    0px 1px 1px rgba(0, 0, 0, 0.14), 
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-    z-index: 2;
-    transition: transform 250ms var(--timing-function);
-  }
-  
-  .modal-button--close {  
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    top: 8px;
-    right: 8px;  
-    
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;  
-    background: var(--primary-bg-colour);
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    cursor: pointer; 
-  }
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  max-width: 450px;
+  // max-height: 609px;
+  width: 100%;
 
-  .modal-button__icon {
-    fill: currentColor;
-    transition: fill 250ms var(--timing-function);
-  
- .modal-button--close:hover & {
-    fill: var(--accent-colour);
+  background-color: var(--primary-bg-colour);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  z-index: 2;
+  transition: transform 250ms var(--timing-function);
+}
+
+.modal-button--close {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 8px;
+  right: 8px;
+
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: var(--primary-bg-colour);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+
+.modal-button__icon {
+  fill: currentColor;
+  transition: fill 250ms var(--timing-function);
+
+  .modal-button--close:hover & {
+    fill: var(--accent-color);
   }
 }
+
+// @media screen and (min-width: 480px) {
+//   // .modal {
+//   //   width: 450px;
+//   //   overflow-y: unset;
+//   // }
+// }
+
 @media screen and (min-width: 1200px) {
   .modal {
     min-width: 528px;
     min-height: 581px;
+    // width: 528px;
   }
 }
-  
