--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -6,10 +6,10 @@
 .feature {
   display: block;
 
-    &__item {
+    .feature__item {
     width: 100%;
 
-      &:not(:last-child) {
+     .feature__item:not(:last-child) {
       margin-bottom: 30px;
     }
   }
@@ -49,7 +49,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-  }
+    }
 
   .feature__item {
     width: calc((100% - 30px) / 2);
