--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,7 @@ img {
 
 .logo {
   font-family: var(--secondary-font);
-  font-weight: 900;
+  font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
@@ -107,17 +107,29 @@ img {
 }
 
 .logo__theme-light {
-  color: var(--secondary-title-text-colour);
-  font-weight: bold;
-  margin-right: 93px;
-  padding-top: 24px;
-  padding-bottom: 25px;
+  color: #000000;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 
 .logo__accent-text {
-  font-size: 26px;
-  line-height: 1.19;
   color: var(--accent-colour);
+}
+
+@media screen and (min-width: 768px) {
+  .logo__theme-light {
+    margin-right: 88px;
+    padding-top: 26px;
+    padding-bottom: 26px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .logo__theme-light {
+    margin-right: 93px;
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
 }
 
 .logo__theme-dark {
@@ -175,22 +187,6 @@ img {
   background-color: #ffffff;
 }
 
-.contact__link {
-  display: none;
-}
-
-.mobile-menu {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-}
-
-.mobile-menu.is-open {
-  opacity: 1;
-  visibility: visible;
-  pointer-events: auto;
-}
-
 .burger__btn,
 .mobile-menu-close__btn {
   background-color: transparent;
@@ -205,7 +201,7 @@ img {
 }
 
 .burger__icon {
-  fill: var(--secondary-title-text-colour);
+  fill: var(--title-color);
   transition: fill 250ms var(--timing-function);
 }
 
@@ -223,25 +219,35 @@ img {
 }
 
 .mobile-menu {
-  display: block;
   position: fixed;
   top: 0;
+  left: 50%;
   width: 100vw;
-  max-width: 480px;
   height: 100vh;
   padding: 48px 40px;
   background-color: var(--primary-bg-colour);
-  transform: translateY(-100%);
-  transition: transform 250ms var(--timing-function);
+  transform: translateY(-100%) translateX(-50%);
+  transition: all 250ms var(--timing-function);
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow-y: scroll;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
 
-.is-open {
-  transform: translateY(0);
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+  transform: translateY(0) translateX(-50%);
 }
 
 .mobile-menu__link {
   font-weight: 500;
-  font-size: 40px;
+  font-size: 34px;
   line-height: 1.17;
   letter-spacing: 0.02em;
   color: var(--secondary-title-text-colour);
@@ -251,26 +257,22 @@ img {
   margin-bottom: 32px;
 }
 
-.menu-contact__list {
-  margin-top: 301px;
-}
-
 .menu-contact__item:not(:last-child) {
   margin-bottom: 33px;
 }
 
 .menu-contact__tel {
   font-weight: 500;
-  font-size: 34px;
-  line-height: 1.17;
+  font-size: 24px;
+  line-height: 1.16;
   letter-spacing: 0.02em;
   color: var(--accent-colour);
 }
 
 .menu-contact__mail {
   font-weight: 500;
-  font-size: 24px;
-  line-height: 1.16;
+  font-size: 18px;
+  line-height: 1.22;
   letter-spacing: 0.02em;
   color: var(--primary-text-colour);
 }
@@ -288,8 +290,8 @@ img {
 
 .menu-social__link {
   font-weight: 500;
-  font-size: 18px;
-  line-height: 1.22;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.02em;
   color: var(--accent-colour);
 }
@@ -350,7 +352,7 @@ img {
     color: var(--accent-colour);
   }
   .navigation__link .navigation__link--current {
-    color: var(--accent-colour);
+    color: var(--accent-color);
   }
   .navigation__link .navigation__link--current::after {
     content: "";
@@ -409,7 +411,7 @@ img {
 }
 
 .navigation__link--current {
-  color: var(--accent-colour);
+  color: var(--accent-color);
 }
 
 .navigation__link--current::after {
@@ -508,11 +510,11 @@ img {
   display: block;
 }
 
-.feature__item {
+.feature .feature__item {
   width: 100%;
 }
 
-.feature__item:not(:last-child) {
+.feature .feature__item .feature__item:not(:last-child) {
   margin-bottom: 30px;
 }
 
@@ -556,12 +558,18 @@ img {
   .feature__item:nth-last-child(-n + 2) {
     margin-bottom: 0px;
   }
+  .feature__title {
+    text-align: unset;
+  }
 }
 
 @media screen and (min-width: 1200px) {
   .page-feature {
     padding-top: 94px;
     padding-bottom: 94px;
+  }
+  .feature__title {
+    text-align: unset;
   }
   .feature {
     display: flex;
@@ -1006,8 +1014,8 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  min-width: 528px;
-  min-height: 581px;
+  max-width: 450px;
+  width: 100%;
   background-color: var(--primary-bg-colour);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -1036,33 +1044,40 @@ img {
 }
 
 .modal-button--close:hover .modal-button__icon {
-  fill: var(--accent-colour);
+  fill: var(--accent-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    min-width: 528px;
+    min-height: 581px;
+  }
 }
 
 .modal-form {
+  width: 100%;
   display: flex;
   flex-direction: column;
   padding: 40px;
 }
 
-.modal-form__field {
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 1.166;
-  letter-spacing: 0.01em;
-  color: var(--primary-text-colour);
-  margin-bottom: 4px;
-}
-
-.message {
+.modal-form__title {
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--secondary-title-text-colour);
-  margin-top: 0;
   margin-bottom: 12px;
+}
+
+.modal-form__field {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--primary-text-colour);
+  margin-bottom: 4px;
 }
 
 .form-wrapper {
@@ -1092,7 +1107,7 @@ img {
   left: 12px;
   transform: translateY(-50%);
   display: block;
-  fill: var(--title-color);
+  fill: var(--secondary-title-text-colour);
   transition: fill 250ms var(--timing-function);
 }
 
@@ -1112,6 +1127,10 @@ img {
 }
 
 .modal-form__message::placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
 
@@ -1121,10 +1140,11 @@ img {
 }
 
 .modal-form__check-desc {
+  width: 100%;
   display: flex;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   color: var(--primary-text-colour);
   align-items: center;
@@ -1158,15 +1178,39 @@ img {
 
 .policy-link {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.714;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   color: var(--accent-colour);
+  text-decoration-line: underline;
 }
 
 .form__button {
   align-self: center;
   display: inline-block;
   margin-top: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-form__title {
+    font-size: 20px;
+    line-height: 1.15;
+  }
+  .modal-form__field {
+    font-size: 12px;
+    line-height: 1.16;
+  }
+  .modal-form__message::placeholder {
+    font-size: 12px;
+    line-height: 1.16;
+  }
+  .modal-form__check-desc {
+    font-size: 14px;
+    line-height: 1.71;
+  }
+  .policy-link {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 /*# sourceMappingURL=main.css.map */
