--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -169,18 +169,6 @@ img {
   background-color: #ffffff;
 }
 
-.mobile-menu {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-}
-
-.mobile-menu.is-open {
-  opacity: 1;
-  visibility: visible;
-  pointer-events: auto;
-}
-
 .burger__btn,
 .mobile-menu-close__btn {
   background-color: transparent;
@@ -195,7 +183,7 @@ img {
 }
 
 .burger__icon {
-  fill: var(--secondary-title-text-colour);
+  fill: var(--title-color);
   transition: fill 250ms var(--timing-function);
 }
 
@@ -213,25 +201,35 @@ img {
 }
 
 .mobile-menu {
-  display: block;
   position: fixed;
   top: 0;
+  left: 50%;
   width: 100vw;
-  max-width: 480px;
   height: 100vh;
   padding: 48px 40px;
   background-color: var(--primary-bg-colour);
-  transform: translateY(-100%);
-  transition: transform 250ms var(--timing-function);
+  transform: translateY(-100%) translateX(-50%);
+  transition: all 250ms var(--timing-function);
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow-y: scroll;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
 
-.is-open {
-  transform: translateY(0);
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+  transform: translateY(0) translateX(-50%);
 }
 
 .mobile-menu__link {
   font-weight: 500;
-  font-size: 40px;
+  font-size: 34px;
   line-height: 1.17;
   letter-spacing: 0.02em;
   color: var(--secondary-title-text-colour);
@@ -241,26 +239,22 @@ img {
   margin-bottom: 32px;
 }
 
-.menu-contact__list {
-  margin-top: 301px;
-}
-
 .menu-contact__item:not(:last-child) {
   margin-bottom: 33px;
 }
 
 .menu-contact__tel {
   font-weight: 500;
-  font-size: 34px;
-  line-height: 1.17;
+  font-size: 24px;
+  line-height: 1.16;
   letter-spacing: 0.02em;
   color: var(--accent-colour);
 }
 
 .menu-contact__mail {
   font-weight: 500;
-  font-size: 24px;
-  line-height: 1.16;
+  font-size: 18px;
+  line-height: 1.22;
   letter-spacing: 0.02em;
   color: var(--primary-text-colour);
 }
@@ -278,8 +272,8 @@ img {
 
 .menu-social__link {
   font-weight: 500;
-  font-size: 18px;
-  line-height: 1.22;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.02em;
   color: var(--accent-colour);
 }
@@ -288,15 +282,9 @@ img {
   color: var(--accent-colour);
 }
 
-@media screen and (min-width: 768px) {
-  .burger__btn {
+@media screen and (max-width: 767px) {
+  .navigation__list {
     display: none;
-  }
-  .mobile-menu {
-    display: none;
-  }
-  .page-header .container {
-    display: flex;
   }
   .contact {
     display: none;
@@ -346,7 +334,7 @@ img {
     color: var(--accent-colour);
   }
   .navigation__link .navigation__link--current {
-    color: var(--accent-colour);
+    color: var(--accent-color);
   }
   .navigation__link .navigation__link--current::after {
     content: "";
@@ -405,7 +393,7 @@ img {
 }
 
 .navigation__link--current {
-  color: var(--accent-colour);
+  color: var(--accent-color);
 }
 
 .navigation__link--current::after {
