--- a/css/main.css
+++ b/css/main.css
@@ -1015,11 +1015,13 @@ img {
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   max-width: 450px;
+  max-height: 581px;
   width: 100%;
+  height: 100%;
   background-color: var(--primary-bg-colour);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  z-index: 2;
+  z-index: 100;
   transition: transform 250ms var(--timing-function);
 }
 
@@ -1044,7 +1046,7 @@ img {
 }
 
 .modal-button--close:hover .modal-button__icon {
-  fill: var(--accent-color);
+  fill: var(--accent-colour);
 }
 
 @media screen and (min-width: 1200px) {
