--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -4,14 +4,15 @@
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   max-width: 450px;
-  // max-height: 609px;
+  max-height: 581px;
   width: 100%;
+  height: 100%;
 
   background-color: var(--primary-bg-colour);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  z-index: 2;
+  z-index: 100;
   transition: transform 250ms var(--timing-function);
 }
 
@@ -36,21 +37,14 @@
   transition: fill 250ms var(--timing-function);
 
   .modal-button--close:hover & {
-    fill: var(--accent-color);
+    fill: var(--accent-colour);
   }
 }
 
-// @media screen and (min-width: 480px) {
-//   // .modal {
-//   //   width: 450px;
-//   //   overflow-y: unset;
-//   // }
-// }
 
 @media screen and (min-width: 1200px) {
   .modal {
     min-width: 528px;
     min-height: 581px;
-    // width: 528px;
   }
 }
