--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,4 +1,4 @@
-.page-feature  {
+.page-feature {
   padding-top: 60px;
   padding-bottom: 60px;
 }
@@ -6,10 +6,17 @@
 .feature {
   display: block;
 
+  &__item {
+    width: 100;
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+
   &__title {
     text-align: center;
     font-weight: 700;
-    font-size: 14px;  
+    font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
@@ -36,24 +43,17 @@
   }
 }
 
-.feature__item {
-  width: 100%;
-
-    &:not(:last-child) {
-    margin-bottom: 30px;
-  }
-
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .feature {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    }
+  }
 
-    &__item {
+    &.feature__item   {
     width: calc((100% - 30px) / 2);
 
-      &:nth-last-child(-n + 2) {
+    &.feature__item :nth-last-child(-n + 2) {
       margin-bottom: 0px;
     }
   }
